--- a/BookStore-UI/Pages/Users/Login.razor
+++ b/BookStore-UI/Pages/Users/Login.razor
@@ -1,47 +1,40 @@
 ﻿@page "/login"
 
-@using BookStore_UI.Models
-@using BookStore_UI.Contracts
-
 @inject IAuthenticationRepository _authRepo
 @inject NavigationManager _navManager
 
-<div class="card">
-    <h3 class="card-title">Login Now</h3>
-    @if (!response)
-    {
-        <div class="alert alert-danger">
-            <p>Something went wrong with the login attempt.</p>
+<h3 class="card-title">Login Now</h3>
+@if (!isSuccess)
+{
+    <ErrorMessage Message="Something went wrong with the login attempt." />
+}
+<div class="card-body">
+    <EditForm Model="Model" OnValidSubmit="HandleLogin">
+        <DataAnnotationsValidator />
+        <ValidationSummary />
+        <div class="form-group">
+            <label for="email">Email Address</label>
+            <InputText id="email" class="form-control" @bind-Value="Model.EmailAddress"></InputText>
+            <ValidationMessage For="@(() => Model.EmailAddress)" />
         </div>
-    }
-    <div class="card-body">
-        <EditForm Model="Model" OnValidSubmit="HandleLogin">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
-            <div class="form-group">
-                <label for="email">Email Address</label>
-                <InputText id="email" class="form-control" @bind-Value="Model.EmailAddress"></InputText>
-                <ValidationMessage For="@(() => Model.EmailAddress)" />
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <InputText id="password" type="password" class="form-control" @bind-Value="Model.Password"></InputText>
-                <ValidationMessage For="@(() => Model.Password)" />
-            </div>
-            <button type="submit" class="btn btn-primary btn-block">Login</button>
-        </EditForm>
-    </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <InputText id="password" type="password" class="form-control" @bind-Value="Model.Password"></InputText>
+            <ValidationMessage For="@(() => Model.Password)" />
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Login</button>
+    </EditForm>
 </div>
 
 @code {
     private LoginModel Model = new LoginModel();
-    private bool response = true;
+    private bool isSuccess = true;
 
     private async Task HandleLogin()
     {
-        response = await _authRepo.Login(Model);
+        isSuccess = await _authRepo.Login(Model);
 
-        if (response)
+        if (isSuccess)
         {
             _navManager.NavigateTo("/");
         }
