--- a/BookStore-UI/Pages/Authors/Create.razor
+++ b/BookStore-UI/Pages/Authors/Create.razor
@@ -4,6 +4,7 @@
 
 @inject IAuthorRepository _repo
 @inject NavigationManager _navManager
+@inject IToastService _toastService
 
 <h3 class="card-title">Create New Author</h3>
 <br />
@@ -12,7 +13,7 @@
 
 @if (!isSuccess)
 {
-    <ErrorMessage Message="Something went wrong with the edit attempt." />
+    <ErrorMessage Message="Something went wrong with the create attempt." />
 }
 
 <EditForm Model="Model" OnValidSubmit="CreateAuthor">
@@ -53,6 +54,7 @@
         isSuccess = await _repo.Create(Endpoints.AuthorsEndpoint, Model);
         if (isSuccess)
         {
+            _toastService.ShowSuccess("Author created successfully.", "");
             BackToList();
         }
     }
