--- a/BookStore-UI/Shared/MainLayout.razor
+++ b/BookStore-UI/Shared/MainLayout.razor
@@ -1,8 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
+    <BlazoredToasts/>
     <div class="sidebar">
-        <NavMenu />
+        <NavMenu/>
     </div>
 
     <div class="main">
